--- a/jump.html
+++ b/jump.html
@@ -5,26 +5,67 @@
 	<meta http-equiv="Pragma" content="No-cache">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
- 	<script type="text/javascript">
-		function goBack(){
-			window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html";
+    
+    <script src="js/jquery-1.9.1.min.js"></script>
+	<script src="js/jquery.mobile-1.3.2.min.js"></script>
+	
+    <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css">
+	<link rel="stylesheet"  href="css/spinner.css">
+	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.5)" href="css/registercheetahG1.css">
+	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.0)" href="css/registercheetahG2.css">
+	
+	<script type="text/javascript">
+		var viewport = document.createElement("meta"), scale;
+		viewport.setAttribute( "name", "viewport");	
+		
+		if(window.devicePixelRatio === 1.5) {
+			viewport.setAttribute("content", "width=device-width, initial-scale=1");
+			document.getElementsByTagName("head")[0].appendChild(viewport);
+		}else if(window.devicePixelRatio === 1) {
+			viewport.setAttribute("content", "width=device-width, initial-scale=1, user-scalable=no");
+			document.getElementsByTagName("head")[0].appendChild(viewport);
 		}
+	</script>
+	
+	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.5)" href="css/g1InlineStyling.css">
+	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.0)" href="css/g2InlineStyling.css">
+ 	<script type="text/javascript">
+		$(document).ready(function() {
+		    $('#continueButton').on('click',function(){
+		    	ricoh.dapi.buzzer("Confirmation");
+				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html";
+		    });
+		});
 	</script>
 </head>
 <body>
-	<p>&nbsp;</p><p>&nbsp;</p>
-	<p align="center"><b>Thank you for signup Trial.</b>
-	</p><p>&nbsp;</p>
-	<table style="width:100%">
-	<tr>
-		<td width="50%" align="center"><p>&nbsp;</p>
-			<p align="center"><font>Check your email to set up your password.</font></p>
-		</td>
-		<td width="50%"><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<p align="center"><input type="button" value="Continue" onClick="goBack();"/></p>
-		</td>
-	</tr>
-	</table>
+	<div id="masterView" data-role="page" id="page" data-theme="c" class="page">	
+		<div data-role="header" data-theme="c" class="formHeader" data-iconpos="left">
+			<span class="headerSpan"> Thank you for signup Trial.</span>
+		</div>
+		
+		<table style="width:100%">
+		<tr>	
+			<td id="leftPane" align="left" class="leftPaneAlignmentStyle" style="width:45%">
+				<div  class="jumpLeft" align="center">
+					<font><b>Check your email to set up your password.</b></font>
+				</div>
+			</td>
+			<td id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-5px; width:55%;">
+				<div>
+					<table>
+					<tr>
+            			<td class="scanButtonLeftPadding">&nbsp;</td>
+						<td>
+						<a data-role="button" id="continueButton" data-corners="false" data-iconpos="left" data-icon="check" class="jumpRight">
+							 Continue</a>
+						</td>
+					</tr>
+					</table>
+				</div>
+			</td>
+		</tr>
+		</table>
+	</div>
 </body>
 </html>
