--- a/index.html
+++ b/index.html
@@ -164,19 +164,17 @@
 	
 </head>
 <body onload="load();">
-	<div id="masterView" data-role="page" id="page" data-theme="c" class="page">	
+	<div id="masterView" data-role="page" id="page" data-theme="d" >	
 		<div data-role="header" data-theme="c" class="formHeader" data-iconpos="left" role="navigation">
 			<span class="headerSpan"> Start your 30 days free trial today!</span>
 		</div>
 		
 		<div data-role="content" class="ui-grid-a" style="width:100%">		
-			<div id="leftPane" align="left" class="leftPaneAlignmentStyle" style="width:40%">
-				<div class="app-image-div">
-					<img alt="ICE.jpg" src="images/ICE.jpg" width="100%" height="100%" />
-				</div>
+			<div id="leftPane" align="left" class="leftPaneAlignmentStyle">
+				
 			</div>
 			
-			<div id="rightPane" class="rightPaneAlignmentStyle" style="width:60%; margin-top:-20px; padding-top:15px">
+			<div id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-20px; padding-top:15px">
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">First Name</div>
 					<div class="scanPropertyElementStyle"">
@@ -196,19 +194,19 @@
 					</div>
 				</div>
 				<div class="scanPropertyRowStyle inputMargin">
-					<div class="label">Company Name</div>
+					<div class="label">Company</div>
 					<div class="scanPropertyElementStyle">
 						<input id="companyName" name="companyName" class="scanFormTextInput validinput" type="text" value=""/>
 					</div>
 				</div>
 				<div class="scanPropertyRowStyle inputMargin">
-					<div class="label">Phone Number</div>
+					<div class="label">Phone</div>
 					<div class="scanPropertyElementStyle">
 						<input id="phoneNumber" name="phoneNumber" class="scanFormTextInput" type="text" value=""/>
 					</div>
 				</div>
 				<div class="scanButtonDivStyle">
-					<table>
+				<table>
 					<tr>
             			<td class="scanButtonLeftPadding">&nbsp;</td>
 						<td>
