--- a/jump.html
+++ b/jump.html
@@ -39,25 +39,25 @@
 	</script>
 </head>
 <body>
-	<div id="masterView" data-role="page" id="page" data-theme="c" class="page">	
+	<div id="masterView" data-role="page" id="page" data-theme="d">	
 		<div data-role="header" data-theme="c" class="formHeader" data-iconpos="left">
 			<span class="headerSpan"> Thank you for signup Trial.</span>
 		</div>
 		
 		<table style="width:100%">
 		<tr>	
-			<td id="leftPane" align="left" class="leftPaneAlignmentStyle" style="width:45%">
-				<div  class="jumpLeft" align="center">
-					<font><b>Check your email to set up your password.</b></font>
+			<td id="leftPane" align="left" class="leftPaneAlignmentStyle" >
+				<div  class="jumpLeft">
+					<b>Check your email to set up your password.</b>
 				</div>
 			</td>
-			<td id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-5px; width:55%;">
+			<td id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-5px;">
 				<div>
 					<table>
 					<tr>
-            			<td class="scanButtonLeftPadding">&nbsp;</td>
+            			<td class="jumpButtonLeftPadding">&nbsp;</td>
 						<td>
-						<a data-role="button" id="continueButton" data-corners="false" data-iconpos="left" data-icon="check" class="jumpRight">
+						<a data-role="button" id="continueButton" data-corners="false" class="jumpRight">
 							 Continue</a>
 						</td>
 					</tr>
