--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			<div id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-20px; padding-top:15px">
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">First Name</div>
-					<div class="scanPropertyElementStyle"">
+					<div class="scanPropertyElementStyle">
 						<input id="firstName" name="firstName" class="scanFormTextInput validinput" type="text" required value=""/>
 					</div>
 				</div>
