--- a/jump.html
+++ b/jump.html
@@ -8,6 +8,7 @@
     
     <script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/jquery.mobile-1.3.2.min.js"></script>
+	<script src="js/ricoh.dapi.js"></script>
 	
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css">
 	<link rel="stylesheet"  href="css/spinner.css">
@@ -30,6 +31,10 @@
 	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.5)" href="css/g1InlineStyling.css">
 	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.0)" href="css/g2InlineStyling.css">
  	<script type="text/javascript">
+		function load(){
+			ricoh.ice.helper.dapi.init( ricoh.dapi.setBack_Menu(false) );
+		}
+		   
 		$(document).ready(function() {
 		    $('#continueButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
@@ -38,7 +43,7 @@
 		});
 	</script>
 </head>
-<body>
+<body onload="load();">
 	<div id="masterView" data-role="page" id="page" data-theme="d">	
 		<div data-role="header" data-theme="c" class="formHeader" data-iconpos="left">
 			<span class="headerSpan"> Thank you for signup Trial.</span>
