--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 	    <input type="hidden" name="sku" value="SKU-00000072" />
 	    <input type="hidden" name="ratePlanId" value="8a28a0056c0a3f30016c0be9c78f20d6" />
 	    <input type="hidden" name="chargeId" value="8a28fd456c0a515e016c0beb957106a7" />
+		<input type="hidden" name="payload" value="false" />
 -->
 	 			
 		<div data-role="header" data-theme="c" class="formHeader" data-iconpos="left" role="navigation">
