--- a/jump.html
+++ b/jump.html
@@ -9,6 +9,8 @@
     <script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/jquery.mobile-1.3.2.min.js"></script>
 	<script src="js/ricoh.dapi.js"></script>
+	<script src="js/ricoh.ice.helper.js"></script>
+	<script src="js/ricoh.dapi.ext.js"></script>
 	
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css">
 	<link rel="stylesheet"  href="css/spinner.css">
