--- a/jump.html
+++ b/jump.html
@@ -58,9 +58,8 @@
 					<b>Check your email to set up your password.</b>
 				</div>
 			</td>
-			<td id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-5px;">
-				<div>
-					<table>
+			<td id="rightPane" class="jumpRightPaneAlignmentStyle" style="margin-top:-5px;">
+					<table style="width:100%">
 					<tr>
             			<td class="jumpButtonLeftPadding">&nbsp;</td>
 						<td>
@@ -69,7 +68,6 @@
 						</td>
 					</tr>
 					</table>
-				</div>
 			</td>
 		</tr>
 		</table>
