--- a/jump.html
+++ b/jump.html
@@ -52,22 +52,25 @@
 		</div>
 		
 		<table style="width:100%">
-		<tr>	
-			<td id="leftPane" align="left" class="leftPaneAlignmentStyle" >
-				<div  class="jumpLeft">
-					<b>Check your email to set up your password.</b>
-				</div>
+		<tr>
+		<!--  
+			<td id="leftPane" class="leftPaneAlignmentStyle" >
+
 			</td>
+		-->
 			<td id="rightPane" class="jumpRightPaneAlignmentStyle" style="margin-top:-5px;">
-					<table style="width:100%">
+				<table style="width:100%">
+					<tr>
+						<td colspan="2"><div class="jumpMessage">Please check your email to set up your password.</div></td>
+					</tr>
 					<tr>
             			<td class="jumpButtonLeftPadding">&nbsp;</td>
 						<td>
-						<a data-role="button" id="continueButton" data-corners="false" class="jumpRight">
-							 Continue</a>
+							<a data-role="button" id="continueButton" data-corners="false" class="jumpRight">
+								 Continue</a>
 						</td>
 					</tr>
-					</table>
+				</table>
 			</td>
 		</tr>
 		</table>
