--- a/register.html
+++ b/register.html
@@ -186,37 +186,38 @@
 -->
 	 			
 		<div data-role="header" data-theme="c" class="formHeader" data-iconpos="left" role="navigation">
-			<span class="headerSpan"> Start your 30 days free trial today!</span>
+			<span class="headerSpan"> Start your 60 days free trial today!</span>
 		</div>
 		
-		<div data-role="content" class="ui-grid-a" style="width:100%">		
+		<div data-role="content" style="width:100%">
+		<!-- 
 			<div id="leftPane" align="left" class="leftPaneAlignmentStyle">
 				
 			</div>
-			
+		 -->			
 			<div id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-20px; padding-top:15px">
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">First Name</div>
 					<div class="scanPropertyElementStyle">
-						<input id="firstName" name="firstName" class="scanFormTextInput validinput" type="text" required value="Jack"/>
+						<input id="firstName" name="firstName" class="scanFormTextInput validinput" type="text" required value=""/>
 					</div>
 				</div>
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">Last Name</div>
 					<div class="scanPropertyElementStyle">
-						<input id="lastName" name="lastName" class="scanFormTextInput validinput" type="text" value="Smith"/>
+						<input id="lastName" name="lastName" class="scanFormTextInput validinput" type="text" value=""/>
 					</div>
 				</div>
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">Email</div>
 					<div class="scanPropertyElementStyle">
-						<input id="customerEmail" name="customerEmail" class="scanFormTextInput" type="text" value="aintest+31@gmail.com"/>
+						<input id="customerEmail" name="customerEmail" class="scanFormTextInput" type="text" value=""/>
 					</div>
 				</div>
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">Company</div>
 					<div class="scanPropertyElementStyle">
-						<input id="companyName" name="companyName" class="scanFormTextInput validinput" type="text" value="Ricoh"/>
+						<input id="companyName" name="companyName" class="scanFormTextInput validinput" type="text" value=""/>
 					</div>
 				</div>
 				<div class="scanPropertyRowStyle inputMargin">
