--- a/register_host.html
+++ b/register_host.html
@@ -146,11 +146,12 @@
 			<span class="headerSpan"> Start your 60 days free trial today!</span>
 		</div>
 		
-		<div data-role="content" class="ui-grid-a" style="width:100%">		
+		<div data-role="content" style="width:100%">
+		<!-- 
 			<div id="leftPane" align="left" class="leftPaneAlignmentStyle">
 				
 			</div>
-			
+		 -->
 			<div id="rightPane" class="rightPaneAlignmentStyle" style="margin-top:-20px; padding-top:15px">
 				<div class="scanPropertyRowStyle inputMargin">
 					<div class="label">First Name</div>
