--- a/register_host.html
+++ b/register_host.html
@@ -146,7 +146,7 @@
 			<span class="headerSpan"> Start your 60 days free trial today!</span>
 		</div>
 		
-		<div data-role="content" style="width:100%">
+		<div data-role="content" class="registerContent">
 		<!-- 
 			<div id="leftPane" align="left" class="leftPaneAlignmentStyle">
 				
