--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv= "Expires" content="0">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store">
+	<meta http-equiv="Expires" content="0">
 	<meta http-equiv="Pragma" content="No-cache">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -68,7 +69,7 @@
 			<tr>
 				<td colspan="3" class="landMessage"><br><br>
 					<b>No tenant information was found.<br><br>
-					You need reply for RICOH Smart Integration using the admin account.<br><br>
+					You need to apply for RICOH Smart Integration using the admin account.<br><br>
 					If you do not have a RICOH Smart Integration account, please contact your sales representative.<br></b>
 					<br><br>
 				</td>
