--- a/register.html
+++ b/register.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv= "Expires" content="0">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store">
+	<meta http-equiv="Expires" content="0">
 	<meta http-equiv="Pragma" content="No-cache">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -191,7 +192,7 @@
 	    <input type="hidden" name="chargeId" value="8adc9dee6b26c21d016b41fbb18d2343" />
 	    
 <!-- Product
-	    <input type="hidden" name="appkey" value="27A6EE8085DCE981D3B2EB0192F2E556B5E9B699A07E3C892251D8889C6ED3CD30ABD7907FDDE4B0C1F5BC4B7329A60C302DE1782BD4C2A41C5E3D15DC904F6CD20150EFFBF52811" />
+	    <input type="hidden" name="appkey" value="DAB6CBBD2F67AF34B123EDDD714B527B7A31EB1833C3E6A9EE27A8A38F0FEC3E70F985BCD94C0853EF5D10FB235E6C9C4F4CF7729D1433DE01EE507007F2440C4EFF7E3AAC106254DA1FB483D55F6C29" />
 	    <input type="hidden" name="mode" value="trial" />
 	    <input type="hidden" name="sku" value="SKU-00000072" />
 	    <input type="hidden" name="ratePlanId" value="8a28a0056c0a3f30016c0be9c78f20d6" />
