--- a/jump.html
+++ b/jump.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv= "Expires" content="0">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store">
+	<meta http-equiv="Expires" content="0">
 	<meta http-equiv="Pragma" content="No-cache">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
