--- a/jump.html
+++ b/jump.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.5)" href="css/registercheetahG1.css">
 	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.0)" href="css/registercheetahG2.css">
 	
+	<title>RSI</title>
 	<script type="text/javascript">
 		var viewport = document.createElement("meta"), scale;
 		viewport.setAttribute( "name", "viewport");	
