--- a/index.html
+++ b/index.html
@@ -14,25 +14,10 @@
 	<script src="js/ricoh.dapi.ext.js"></script>
 	
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css">
-	<link rel="stylesheet"  href="css/spinner.css">
-	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.5)" href="css/registercheetahG1.css">
-	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.0)" href="css/registercheetahG2.css">
+	<link rel="stylesheet"  href="css/indexStyling.css">
+	<link rel="stylesheet"  href="css/registercheetahG2.css">
 	
-	<script type="text/javascript">
-		var viewport = document.createElement("meta"), scale;
-		viewport.setAttribute( "name", "viewport");	
-		
-		if(window.devicePixelRatio === 1.5) {
-			viewport.setAttribute("content", "width=device-width, initial-scale=1");
-			document.getElementsByTagName("head")[0].appendChild(viewport);
-		}else if(window.devicePixelRatio === 1) {
-			viewport.setAttribute("content", "width=device-width, initial-scale=1, user-scalable=no");
-			document.getElementsByTagName("head")[0].appendChild(viewport);
-		}
-	</script>
-	
-	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.5)" href="css/g1InlineStyling.css">
-	<link rel="stylesheet" media="screen and (-webkit-device-pixel-ratio: 1.0)" href="css/g2InlineStyling.css">
+	<title>RSI</title>
  	<script type="text/javascript">
 		function load(){
 			ricoh.ice.helper.dapi.init( ricoh.dapi.setBack_Menu(false) );
@@ -53,12 +38,13 @@
 			
 			$('#susaButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
-				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html";
+				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
 		    });
 			
 		    $('#loginButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
-				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html";
+				//window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html";
+				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
 		    });
 		});
 	</script>
@@ -68,10 +54,10 @@
 	<div class="landPageStyle">	
 		<table class="landTableStyle">
 			<tr>
-				<td colspan="3" class="landMessage"><br><br>
-					<b>No tenant information was found.<br><br>
-					You need to apply for RICOH Smart Integration using the admin account.<br><br>
-					If you do not have a RICOH Smart Integration account, please contact your sales representative.<br></b>
+				<td colspan="3" class="landMessage"><br>
+					No tenant information was found.<br>
+					You need to apply for RICOH Smart Integration using the admin account.<br>
+					If you do not have a RICOH Smart Integration account, please contact your sales representative.<br>
 					<br><br>
 				</td>
 			</tr>
@@ -86,7 +72,7 @@
 			</tr>
 			<tr>
           		<td colspan="2">&nbsp;</td>
-				<td><br><br>
+				<td><br>
 					<a data-role="button" id="loginButton" data-corners="false" class="landBottomButtonStyle">
 						 Login</a>
 				</td>
