--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<td style="width:33%">
 					<a data-role="button" id="canadaButton" data-corners="false" class="landRedButtonStyle">Canada</a></td>
 				<td style="width:33%;margin-bottom:-10px;padding-bottom:-10px;">
-					<a data-role="button" id="susaButton" data-corners="false" class="landRedButtonStyle">South America</a></td>
+					<a data-role="button" id="susaButton" data-corners="false" class="landRedButtonStyle">Latin America</a></td>
 					
 			</tr>
 			<tr>
