--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="js/ricoh.dapi.js"></script>
 	<script src="js/ricoh.ice.helper.js"></script>
 	<script src="js/ricoh.dapi.ext.js"></script>
+	<script src="js/server.js"></script>
 	
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css">
 	<link rel="stylesheet"  href="css/indexStyling.css">
@@ -38,13 +39,20 @@
 			
 			$('#susaButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
-				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+				if(serverHost=="devu"){
+					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+				}else if(serverHost=="na"){
+					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+				}
 		    });
 			
 		    $('#loginButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
-				//window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html";
-				window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+				if(serverHost=="devu"){
+					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+				}else if(serverHost=="na"){
+					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+				}
 		    });
 		});
 	</script>
