--- a/jump.html
+++ b/jump.html
@@ -44,9 +44,9 @@
 		    $('#continueButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
 				if(serverHost=="devu"){
-					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}else if(serverHost=="na"){
-					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}
 		    });
 		});
