--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				//var sUrl = window.location.href;
 				//window.location = sUrl.substring(0, sUrl.length-10) + "market.html?area=usa";
 				window.location =  "market.html?area=usa";
-		    });			
+		    });
 
 			$('#canadaButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
@@ -40,18 +40,18 @@
 			$('#susaButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
 				if(serverHost=="devu"){
-					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&&suppressRedirect=true";
 				}else if(serverHost=="na"){
-					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}
 		    });
 			
 		    $('#loginButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
 				if(serverHost=="devu"){
-					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}else if(serverHost=="na"){
-					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true";
+					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}
 		    });
 		});
@@ -70,12 +70,12 @@
 				</td>
 			</tr>
 			<tr style="margin-top:10px;">
-				<td style="width:33%;">
+				<td style="width:31%;">
 					<a data-role="button" id="usaButton" data-inset="true"  class="landRedButtonStyle">USA</a></td>
-				<td style="width:33%">
+				<td style="width:31%">
 					<a data-role="button" id="canadaButton" data-corners="false" class="landRedButtonStyle">Canada</a></td>
-				<td style="width:33%;margin-bottom:-10px;padding-bottom:-10px;">
-					<a data-role="button" id="susaButton" data-corners="false" class="landRedButtonStyle">Latin America</a></td>
+				<td style="width:38%;margin-bottom:-10px;padding-bottom:-10px;">
+					<a data-role="button" id="susaButton" data-corners="false" class="landRedButtonSmallFontStyle">Latin America/Others</a></td>
 					
 			</tr>
 			<tr>
