--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			$('#susaButton').on('click',function(){
 		    	ricoh.dapi.buzzer("Confirmation");
 				if(serverHost=="devu"){
-					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&&suppressRedirect=true";
+					window.location = "https://www.devu.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}else if(serverHost=="na"){
 					window.location = "https://www.na.smart-integration.ricoh.com/si-apps/pub/index.html?skipConfirm=true&suppressRedirect=true";
 				}
